```mermaid
classDiagram
    class Formateur {
        - int id
        - String nom
        - String prenom
        - String email
        + ajouterSeance(seance : Seance) : void
        + consulterSeances() : List<Seance>
    }

    class Seance {
        - int id
        - LocalDate date
        - LocalTime heureDebut
        - LocalTime heureFin
        - String description
        + ajouterActivite(activite : Activite) : void
        + listerActivites() : List<Activite>
    }

    class Activite {
        - int id
        - String nom
        - String description
        + afficherDetails() : String
    }

    Formateur "1" --> "N" Seance
    Seance "1" --> "N" Activite
